# barcode_checks

./: .gitignore  DEV-NOTES.md  README.md
.github/workflows/: deploy_functions.yml
alembic/: env.py
alembic/versions/: 18ae93446498_add_timertriggerconfig_and_related_link_.py  e75afe58ffbe_remove_user_analysis_connector.py
func_alma_apifetcher/: README.md  function_app.py  host.json  pyproject.toml  requirements.txt
func_alma_apifetcher/handlers/: api_fetch_handlers.py
func_alma_dataprep/: README.md  datacombinequeue1.json  datacombinequeue2.json  function_app.py  host.json  pyproject.toml  requirements.txt
func_alma_dataprep/handlers/: combiner_handlers.py  main_orchestrator_bp.py
func_alma_dataprep/handlers/activities/: combine_chunks.py  merge_reports.py  send_notifications.py
func_alma_dataprep/handlers/entities/: report_tracker_entity.py
func_alma_dataprep/handlers/sub_orchestrators/: multi_report.py  single_report.py
func_alma_notifier/: README.md  function_app.py  host.json  pyproject.toml  requirements.txt
func_alma_notifier/handlers/: notification_handlers.py
func_alma_notifier/templates/: email_template.html.j2
func_alma_scheduler/: .gitignore  function_app.py  host.json  pyproject.toml
func_alma_scheduler/handlers/: handler_helpers.py  scf_duplicates_handler.py  scf_missing_incorrect_row_tray.py
func_alma_scheduler/shared_code/.poetry/plugins/: config.toml
func_alma_scheduler/shared_code/alma_client/: client.py
func_alma_scheduler/shared_code/shared_code/database/: __init__.py
func_alma_scheduler/shared_code/shared_code/utils/: __init__.py
func_alma_scheduler/shared_code/utils/: data_utils.py  storage_helpers.py
func_alma_updater/: host.json  pyproject.toml
func_alma_updater/shared_code/alma_client/: exceptions.py
func_alma_updater/shared_code/shared_code/alma_client/: __init__.py
func_alma_updater/shared_code/shared_code/utils/: config_helpers.py
shared_code/: __init__.py  config.py  pyproject.toml  requirements.txt
shared_code/alma_client/: client.py
shared_code/database/: __init__.py  database.py  models.py
shared_code/shared_code/: requirements.txt
shared_code/utils/: storage_helpers.py
