[tool.poetry]
name = "func-alma-apifetcher"
version = "0.1.0"
description = "Azure Function App for fetching data from Alma APIs"
authors = ["Tom Boone <boone@wrlc.org>"]
readme = "README.md"
packages = [
    {include = "handlers"},
    {include = "shared_code"}
]


[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.23.0"
SQLAlchemy = "^2.0.23"
PyMySQL = "^1.1.1"
requests = "^2.31.0"
azure-core = "^1.33.0"
azure-communication-email = "^1.0.1b1"
azure-storage-blob = "^12.25.1"
azure-storage-queue = "^12.12.0"
azure-identity = "^1.21.0"
pandas = "^2.2.3"
jinja2 = "^3.1.6"
alembic = "^1.15.2"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
