[tool.poetry]
name = "func-alma-dataprep"
version = "0.1.0"
description = "Azure Function App for preparing Alma data"
authors = ["Tom Boone <boone@wrlc.org>"]
readme = "README.md"
packages = [
    {include = "handlers"},
    {include = "shared_code"}
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.18.0"
pandas = "^2.2.3"

# Reference the local shared_code directory
shared-code = { path = "../shared_code", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
