[tool.poetry]
name = "func-alma-notifier"
version = "0.1.0"
description = "Azure Function App for sending notifications from Alma APIs"
authors = ["Tom Boone <boone@wrlc.org>"]
readme = "README.md"
packages = [
    {include = "handlers"},
    {include = "shared_code"}
]

[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.18.0"
pandas = "^2.2.3"
azure-communication-email = "^1.0.0"
azure-identity = "^1.21.0"
jinja2 = "^3.1.6"

# Reference the local shared_code directory
shared-code = { path = "../shared_code", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"