[tool.poetry]
name = "func-alma-notifier"
version = "0.1.0"
description = "Azure Function App for sending notifications from Alma APIs"
authors = ["Tom Boone <boone@wrlc.org>"]
readme = "README.md"
packages = [
    {include = "handlers"},
    {include = "shared_code"}
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[tool.poetry.dependencies]
python = "^3.11"
azure-core = "^1.33.0"
azure-communication-email = "^1.0.1b1"
azure-functions = "^1.23.0"
azure-storage-blob = "^12.25.1"
azure-storage-queue = "^12.12.0"
azure-identity = "^1.21.0"
pandas = "^2.2.3"
jinja2 = "^3.1.6"
SQLAlchemy = "^2.0.40"
PyMySQL = "^1.1.1"
requests = "^2.32.3"
alembic = "^1.15.2"
python-dotenv = "^1.1.0"
cryptography = "43.0.3"


[tool.poetry.group.dev.dependencies]
# No dev dependencies for this project


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"