[tool.poetry]
name = "shared-code"
version = "0.1.0"
description = "Shared code for Alma API processing"
authors = ["Tom Boone <boone@wrlc.org>"]
readme = "README.md"
packages = [
    {include = "alma_client"},
    {include = "utils"},
    {include = "config"},
    {include = "database"}
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
azure-storage-blob = "^12.25.1"
azure-storage-queue = "^12.12.0"
azure-core = "^1.33.0"
sqlalchemy = "^2.0.40"
pymysql = "^1.1.1"
alembic = "^1.15.2"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
